# framesh

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
framesh/: __init__.py  board.py  curvature.py  flare.py  gframes.py  patch.py  rops.py  shot.py  toldi.py  util.py
test/: conftest.py  test_board.py  test_flare.py  test_gframes.py  test_rops.py  test_shot.py  test_toldi.py  test_util.py
