[project]
authors = [
    { name = "Luca Grementieri", email = "luca.grementieri@ens-paris-saclay.fr" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Mathematics",
]
description = "Local reference frame algorithms for meshes"
name = "framesh"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1"
dynamic = ["dependencies"]

[project.optional-dependencies]
test = ["pip-tools~=7.4", "pytest~=8.2", "ruff~=0.6"]

[tool.setuptools]
packages = ["framesh"]

[tool.setuptools.package-data]
"framesh" = ["py.typed"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.vscode
  | venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]

[tool.mypy]
check_untyped_defs = true
exclude = [
    '\.git',
    '\.mypy_cache',
    '\.tox',
    '\.vscode',
    '_skbuild',
    'build',
    'dist',
    'venv'
]
namespace_packages = true
no_implicit_optional = true
plugins = ['numpy.typing.mypy_plugin']
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true