[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "framesh"
version = "0.1"
description = "Local reference frame algorithms for meshes"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Luca Grementieri", email = "luca.grementieri@ens-paris-saclay.fr" }
]
keywords = [
    "3d",
    "mesh", 
    "geometry",
    "local-reference-frame",
    "computer-graphics", 
    "computational-geometry",
    "point-cloud"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
test = ["mypy~=1.13", "pip-tools~=7.4", "pytest~=8.3", "ruff~=0.8", "scipy-stubs~=1.14"]

[project.urls]
Repository = "https://github.com/lucagrementieri/framesh"
Issues = "https://github.com/lucagrementieri/framesh/issues"

[tool.setuptools]
packages = ["framesh"]

[tool.setuptools.package-data]
"framesh" = ["py.typed"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }

[tool.mypy]
check_untyped_defs = true
exclude = [
    '\.git',
    '\.*_cache',
    '\.vscode',
    '_skbuild',
    'build',
    'dist',
    'venv'
]
namespace_packages = true
no_implicit_optional = true
plugins = ['numpy.typing.mypy_plugin']
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "YTT", "ANN", "FBT"]